Solved Put user problem