@@ -4,6 +4,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.sql.Blob;
 import java.sql.SQLException;
+import java.util.Collections;
 import java.util.List;
 
 import javax.sql.rowset.serial.SerialBlob;
@@ -53,7 +54,7 @@ public class UserModel{
         this.name = name;
         this.reputation = reputation;
         this.encodedPassword = encodedPassword;
-        this.rols = List.of(rols);
+        this.rols = rols != null ? List.of(rols) : Collections.emptyList();
         this.contact = contact;
         this.description = description;
         this.active = active;
